Changeset to project strcuture